--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,11 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        BackendBundle\Entity\User:
+            algorithm: bcrypt
+            cost: 4 
+            # sifrar la contraseña
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
