--- a/src/AppBundle/Resources/config/routing/user.yml
+++ b/src/AppBundle/Resources/config/routing/user.yml
@@ -1,4 +1,6 @@
 login:
     path: /login
     defaults: { _controller: AppBundle:User:login }
-    
+regiter:
+    path: /register
+    defaults: { _controller: AppBundle:User:register }
