--- a/src/AppBundle/Resources/config/routing/user.yml
+++ b/src/AppBundle/Resources/config/routing/user.yml
@@ -1,6 +1,7 @@
 login:
     path: /login
     defaults: { _controller: AppBundle:User:login }
-regiter:
+    
+register:
     path: /register
     defaults: { _controller: AppBundle:User:register }
