--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,9 +8,11 @@ security:
             # sifrar la contraseña
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory:
-            memory: ~
+    providers:       #autenticaciom de login
+        user_db_provider: #provider de usuario
+            entity:  
+                class: BackendBundle:User #de la clase Usuario
+                property: email #propiedad que autentica al usuario
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -20,6 +22,13 @@ security:
 
         main:
             anonymous: ~
+            provider: user_db_provider
+            form_login:
+                login_path: /login  
+                check_path: /login_check #comprueva si el usuario existe
+            logout:
+                path: logout
+                target: / #cuando sale de la sesion  
             # activate different ways to authenticate
 
             # http_basic: ~
