--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,16 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# KnpPaginatorBundle
+
+knp_paginator:
+    page_range: 5 #rango de la paginacion
+    default_options:
+        page_name: page
+        sort_field_name: #sort el nombre del parametro que se usara
+        sort_direction_name: direction
+        distinct: true  
+    template: #a las platilla a las que se usaran 
+        pagination: AppBundle:Layouts:custom_pagination.html.twig
+        sortable: KpnPaginatorBundle:Pagination:sortable_link.html.twig
