--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,14 @@ services:
         tags:
             - { name: twig.extension }
 
+    user_stats.twig_extension:
+        class: AppBundle\Twig\UserStatsExtension
+        public: false
+        arguments:
+            doctrine: "@doctrine"
+        tags:
+            - { name: twig.extension }
+
             
 
 
